--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
        
                <a href="https://www.facebook.com/ritikasharma1105/" target="_blank" class="fa fa-facebook"></a>
         <a href="https://www.instagram.com/ritikas1105/?hl=en" target="_blank" class="fa fa-instagram"></a>
-        <a href="https://github.com/ritikas1105" target="_blank" class="fa fa-github"></a>
+           <a href=""mailto:ritika1105@gmail.com" target="_blank" class="fa fa-google-plus"></a>
         <a href="https://www.linkedin.com/in/ritika-sharma-91abba158/" target="_blank" class="fa fa-linkedin"></a>
       </div>
           </div>
